# codepeek

./: Cargo.toml
src/: main.rs  model.rs
src/analyzer/: calls.rs  mod.rs
src/parser/: javascript.rs  mod.rs  python.rs  rust.rs
src/ui/: detail_view.rs  file_tree.rs  function_list.rs  highlight.rs  mod.rs  source_view.rs
