[package]
name = "codepeek"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codepeek"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
anyhow = "1"
